test/ClangImporter/Inputs/availability_custom_domains_other.code
import Seas

@available(Arctic) // expected-error {{unrecognized platform name 'Arctic'}}
fn availableInArctic() { }

@available(Mediterranean)
fn availableInMediterranean() { }

fn testOtherClangDecls() {
  available_in_baltic() // expected-error {{'available_in_baltic()' is only available in Baltic}}
}
